--- a/index.html
+++ b/index.html
@@ -18,16 +18,19 @@
         margin-right: 20px;
       }
     </style>
+    <script src="index.js"></script>
   </head>
   <body>
     <div class="flexbox-container">
       <div>
         <h3>Repositories</h3>
+        <a href="#" onclick="getRepositories()">Get Repositories</a>
+        <div id="repositories"></div>
       </div>
       <div>
         <h3>Commits</h3>
-      </div>
+        <div id="commits"></div>
     </div>
-    <script src="index.js"></script>
+    </div>
   </body>
 </html>
